kubernetes/base/datahub-mae-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: datahub-mae-consumer
  name: datahub-mae-consumer
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    io.kompose.service: datahub-mae-consumer
status:
  loadBalancer: {}
